<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addTransaction">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/addTransactionTopText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/addTransaction"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/addTransactionButton"
            android:layout_width="347dp"
            android:layout_height="100dp"
            android:layout_marginTop="36dp"
            android:text="@string/newManualTransactionButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addTransactionTopText" />

        <Button
            android:id="@+id/AddNewWalletButton"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="15dp"
            android:text="@string/newWalletButton"
            app:layout_constraintEnd_toEndOf="@+id/addTransactionButton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/addTransactionButton"
            app:layout_constraintTop_toBottomOf="@+id/addTransactionButton" />

        <Button
            android:id="@+id/addNewExchangeButton"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="15dp"
            android:text="@string/newExchangeButton"
            app:layout_constraintEnd_toEndOf="@+id/AddNewWalletButton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/AddNewWalletButton"
            app:layout_constraintTop_toBottomOf="@+id/AddNewWalletButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
</layout>