<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chooseWalletFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/addBitcoinButton"
            android:layout_width="347dp"
            android:layout_height="100dp"
            android:layout_marginTop="24dp"
            android:text="@string/bitcoin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chooseWalletTopText" />

        <Button
            android:id="@+id/addArkButton"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="15dp"
            android:text="@string/ark"
            app:layout_constraintEnd_toEndOf="@+id/addBitcoinButton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/addBitcoinButton"
            app:layout_constraintTop_toBottomOf="@+id/addBitcoinButton" />

        <TextView
            android:id="@+id/chooseWalletTopText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/newWallet"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
</layout>