<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addExchangeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/addExchangeKey"
            android:layout_width="351dp"
            android:layout_height="41dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@string/key"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/keyText" />

        <EditText
            android:id="@+id/addExchangePrivateKey"
            android:layout_width="346dp"
            android:layout_height="47dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@string/privateKey"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/addExchangeKey"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="@+id/privateKeyText"
            app:layout_constraintTop_toBottomOf="@+id/privateKeyText" />

        <TextView
            android:id="@+id/privateKeyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/privateKey"
            android:text="@string/privateKey"
            app:layout_constraintStart_toStartOf="@+id/addExchangeKey"
            app:layout_constraintTop_toBottomOf="@+id/addExchangeKey" />

        <TextView
            android:id="@+id/keyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/key"
            app:layout_constraintStart_toStartOf="@+id/addExchangeKey"
            app:layout_constraintTop_toBottomOf="@+id/exchangeName" />

        <TextView
            android:id="@+id/addExchangeTopView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/newExchange"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/exchangeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/binance"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addExchangeTopView" />

        <Button
            android:id="@+id/confirmAddExchangeButton"
            android:layout_width="348dp"
            android:layout_height="52dp"
            android:layout_marginBottom="16dp"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.523"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/showErrorExchange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/confirmAddExchangeButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
</layout>